# audio-plugin-coder

./: .gitignore  CMakeLists.txt  README.md
.agent/rules/: agent.md  file-naming-conventions.md
.agent/skills/skill_design_webview/: SKILL.md
.agent/skills/skill_implementation/: SKILL.md
.agent/skills/skill_troubleshooting/: SKILL.md
.agent/troubleshooting/resolutions/: webview-member-order-crash.md
.agent/workflows/: design.md  dream.md  impl.md  plan.md  ship.md  test.md
.claude/: WEBVIEW_FRAMEWORK_ANALYSIS.md
.claude/rules/: agent.md  file-naming-conventions.md
.claude/skills/impl/: SKILL.md
.claude/skills/skill_design_webview/: SKILL.md
.claude/skills/skill_troubleshooting/: SKILL.md
.claude/troubleshooting/: known-issues.yaml
.claude/troubleshooting/resolutions/: dsp-001-silent-effects-chain.md  webview-005-juce-native-function-api.md  webview-blank-screen.md  webview-member-order-crash.md  webview-resource-provider-not-called.md
.claude/workflows/: design.md  dream.md  impl.md  plan.md  test.md
.github/: DISCUSSIONS_WELCOME.md
.github/workflows/: build-pr.yml  build-release.yml  build-vst3-clap.yml  build_bridges.yml
.kilocode/rules/: agent.md  file-naming-conventions.md
.kilocode/skills/skill_design/: SKILL.md
.kilocode/skills/skill_design_webview/: SKILL.md
.kilocode/skills/skill_implementation/: SKILL.md
.kilocode/skills/skill_troubleshooting/: SKILL.md
.kilocode/troubleshooting/resolutions/: webview-blank-screen.md  webview-member-order-crash.md
.kilocode/workflows/: design.md  dream.md  impl.md  plan.md  ship.md  test.md
design_library/: manifest.json
docs/: github-actions.md
plugins/CloudWash/: CMakeLists.txt  CODE_REVIEW_FINDINGS.md  get-crash-info.ps1  pluginval_full_report.txt  pluginval_report.txt
plugins/CloudWash/Source/: PluginProcessor.cpp  PluginProcessor.h
plugins/CloudWash/Source/dsp/clouds/dsp/: granular_processor.h
plugins/GameSFXDAW/: CMakeLists.txt  status.json
plugins/GameSFXDAW/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md  sfx-container-schema.md
plugins/GameSFXDAW/Design/: index.html  v1-style-guide.md  v1-ui-spec.md
plugins/GameSFXDAW/Documentation/: PRD.md
plugins/GameSFXDAW/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SamplePlayer/: CMakeLists.txt  status.json
plugins/SamplePlayer/Design/: index.html
plugins/SamplePlayer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SamplePlayer/cmake/: rename_vst3_bundle.cmake
plugins/bassic/: CMakeLists.txt
plugins/bassic/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/dream/: CMakeLists.txt
plugins/dream/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/dream/Source/tools/: SmoothPresetBuilder.cpp
plugins/dream/Source/ui/public/: index.html
plugins/gnarly2/: CMakeLists.txt
plugins/gnarly3/: CMakeLists.txt
plugins/mutable-instruments-clouds-clone/: CMakeLists.txt  status.json
plugins/mutable-instruments-clouds-clone/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/mutable-instruments-clouds-clone/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/mutable-instruments-clouds-clone/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/mutable-instruments-clouds-clone/Source/ui/public/: index.html
plugins/mutable-instruments-clouds-clone/Source/ui/public/js/: index.js
plugins/nf_gnarly/: CMakeLists.txt
plugins/nf_gnarly/Design/: v1-test.html
plugins/nf_gnarly/Source/: PluginEditor.cpp  PluginEditor.h
plugins/nf_gnarly/Source/ui/public/js/: index.js
plugins/nf_gnarly/Source/ui/public/js/juce/: index.js
plugins/psilocybian/: CMakeLists.txt
plugins/psilocybian/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/psilocybian/Source/tools/: SmoothPresetBuilder.cpp
plugins/psilocybian/Source/ui/public/: index.html
scripts/: auto-copy-vst3.ps1  autobuild-copy-macos.sh  build-and-open-manual-deploy.ps1  open-folder-after-build.ps1  setup_bridges.bat  setup_bridges.ps1
scripts/installer/: create-windows-installer.ps1  installer-template.iss
templates/: CMakeLists.txt.template  CMakeLists.visage.template  IMPROVEMENTS.md  status-template.json
templates/FFGL_Bridge/: CMakeLists.txt
templates/FFGL_Bridge/Source/: JuceWrapper.h  PluginMain.cpp
templates/Max_External/: CMakeLists.txt
templates/Max_External/Source/: JuceBridge.h  JuceDSP.h  MaxWrapper.cpp
templates/ffgl/: README.md
templates/ffgl/Source/: ParameterCache.h  TextureUploader.h
templates/max-external/: CMakeLists.txt  README.md
templates/max-external/Source/: JuceDSP.h  JuceUI.cpp  MaxWindowHandle.h
templates/visage/: CMakeLists.txt.template  PluginEditor.cpp.template  PluginEditor.h.template  README.md  VisageControls.h.template
templates/webview/: CMakeLists.txt.template  PluginEditor.cpp.template  PluginEditor.h.template  README.md
